kubernetes/core-components/traefik/external/middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dashboard-ipallowlist
spec:
  ipAllowList:
    sourceRange:
      - 10.0.100.0/24
      - fd87:5445:bcc6:64::1/64
